<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_centers"
            android:title="@string/centers" />
        <item
            android:id="@+id/nav_episodes"
            android:title="@string/episodes" />
        <item
            android:id="@+id/nav_wallets"
            android:title="@string/wallets" />
<!--        <item-->
<!--            android:id="@+id/nav_admins"-->
<!--            android:title="@string/admins" />-->
        <item
            android:id="@+id/nav_students"
            android:title="@string/students" />

        <item
            android:id="@+id/nav_ads"
            android:title="@string/ads" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>

</menu>