<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/colorCardBackground"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white"
        android:padding="10dp">

        <ImageView
            android:id="@+id/customStudent_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/customStudent_img_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_location"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/customStudent_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/customStudent_image"
            android:layout_marginHorizontal="8dp"
            android:layout_toStartOf="@+id/customStudent_img_location"
            android:layout_toEndOf="@+id/customStudent_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customStudent_tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text=" اسم الطالب " />

            <TextView
                android:id="@+id/customStudent_tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                tools:text="@string/phone" />

            <TextView
                android:id="@+id/customStudent_tv_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                tools:text="@string/branch" />

            <TextView
                android:id="@+id/customStudent_tv_episode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                tools:text="@string/episodes" />

            <TextView
                android:id="@+id/customStudent_tv_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                tools:text="@string/centers" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customStudent_linear"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/customStudent_tv_tasks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_task"
                android:gravity="center"
                android:text="@string/task"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/customStudent_tv_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_star"
                android:gravity="center"
                android:text="@string/rate"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>